# mosaic

mosaic/: Cargo.toml
mosaic-cli/src/: config.rs  handlers.rs  main.rs  types.rs
mosaic/src/: errors.rs  lib.rs
mosaic/src/instructions/: execute.rs  init_root.rs  init_signing_session.rs  mod.rs  sign.rs
mosaic/src/state/: mod.rs  root.rs  signing_session.rs
mosaic/tests/: execute_failures.rs  init_root.rs  init_root_failures.rs  init_signing_session.rs  init_signing_session_failures.rs
mosaic/tests/common/: mod.rs
